--- a/app.css
+++ b/app.css
@@ -41,6 +41,12 @@ h1 {
   margin: 30px auto auto auto;
 }
 
+@media(min-width: 1200px) {
+  #text {
+    width: 30%;
+  }
+}
+
 @media(max-width: 642px) {
   #text {
     width: 95%;
